# quark-kernel

./: .gitignore  DEVELOPERS.md  Makefile  Makefile.am  OS-DESIGN.md  README.md  configure.ac
include/: Makefile.am  addressspace.h  allocator.h  avltree.h  context.h  elf.h  heap.h  kernel.h  math.h  memmap.h  memorymap.h  mmgr.h  module.h  pageallocator.h  priorityqueue.h  process.h  queue.h  resource.h  sharedobject.h  stdio.h  string.h  syscallid.h  syscalls.h  system.h  tty.h
include/platform/: context.h  interrupts.h  paging.h  putc.h
include/sys/: syscalls.h
include/types/: memorytype.h  message.h  oid.h  physaddr.h  pid.h  sigaction.h  sighandler.h  signalid.h  status.h  syscallarg.h  syscallid.h  syscallret.h
include/x86/: apic.h  idt.h  isr.h  mp.h  multiboot2.h  processstate.h
rootfs/boot/grub/: grub.cfg
src/: Makefile  Makefile.am  addressspace.c  addressspace.cpp  addressspace.h  addressspace.hpp  allocator.c  allocator.cpp  allocator.hpp  avltree.c  bitmap.h  buddyallocator.cpp  buddyallocator.h  buddyallocator.hpp  cstring.cpp  cstring.h  elf.c  elf.cpp  elf.hpp  entry.S  error.cpp  error.h  errortype.h  heap.c  heap.cpp  heap.hpp  interruptdescriptor.cpp  interruptdescriptor.hpp  interrupts.hpp  inthandlers.cpp  inthandlers.hpp  kernel.c  kernel.cpp  kernel.hpp  kernelstate.cpp  kernelstate.hpp  linker.ld  map.hpp  math.c  math.cpp  (+55 more)
src/interrupts/: Makefile  Makefile.am
src/interrupts/x86/: idt.S  interruptdescriptor.cpp  interruptdescriptor.hpp  interrupts.cpp  inthandlers.cpp  inthandlers.hpp
src/mmgr/: Makefile.am  addressspace.cpp  addressspace.hpp  buddyallocator.cpp  buddyallocator.hpp  memorymap.cpp  memorymap.hpp  mmap.hpp  mmgr.hpp  pageallocator.hpp  types.hpp
src/mmgr/x86/: mmap.cpp  pagetableentry.cpp  pagetableentry.hpp
src/types/: handle.h  physaddr.h  status.h
src/x86/: apic.c  apic.h  context.c  contextswitch.S  do_syscall.S  entry.S  idt.c  idt.hpp  initialize.c  initialize.cpp  interrupts.c  interrupts.cpp  interrupts.h  inthandlers.hpp  isr.c  isr.h  linker.ld  load_context.S  memorymanagerx86.cpp  memorymanagerx86.hpp  mmap.cpp  mmgr.c  msr.c  msr.h  multiboot2.c  multiboot2.cpp  multiboot2.h  multiboot2.hpp  multiboot2header.S  pagetableentry.cpp  pagetableentry.hpp  paging.c  pio.S  pio.hpp  preempt.S  putc.c  quark_x86.c  tty.cpp  tty.hpp
